# Maxtrader

./: .env.example  .replit  BACKTEST_RESULTS_SPY_INDA.md  BACKTEST_VALIDATION_REPORT.md  CHAMPION_STRATEGY_RESULTS.md  DEPLOYMENT_FIX.md  DEPLOYMENT_INSTRUCTIONS.md  FRIDAY_CHECKLIST.md  HIGH_VOL_DECISION.md  MULTI_SYMBOL_EXPANSION_PLAN.md  PAPER_TRADING_LAUNCH.md  PHASE_1_STATUS.md  README.md  REAL_TRADING_IMPLEMENTATION.md  SMARTMONEY_HOMMA_RESEARCH.md  SPY_INDA_ANALYSIS_FINAL.md  SYSTEM_STATUS.md  ULTRA_LOW_VOL_DESIGN_DECISION.md  ULTRA_LOW_VOL_SYNOPSIS.txt  VOLATILITY_STRESS_TEST_RESULTS.md  VWAP_MODULE_STATUS.md  analyze_missed_signals.py  analyze_signal_bottleneck.py  analyze_trades.py  backtest_multi_instrument.py  backtest_smartmoney_homma.py  calculate_high_vol_sharpe.py  compare_ict_targets.py  debug_band_crosses.py  debug_high_vol_trades.py  debug_signals.py  debug_vwap_bands_2017.py  download_volatility_periods.py  fetch_polygon_data.py  generate_sample_data.py  live_trading_main.py  main_backtest.py  main_backtest_adaptive.py  main_backtest_high_vol.py  main_backtest_low_vol.py  (+22 more)
analysis/: backtest_22months_final.py  backtest_accurate.py  backtest_correct.py  backtest_optimized.py  backtest_relaxed_params.py  backtest_sampled.py  calculate_tuesday_pnl.py  check_monday_nov24_signals.py  check_monday_signals.py  check_trade3_extended.py  ict_param_sweep.py  missed_opportunities.py  missed_pnl.py  optimize_ict_params.py
attached_assets/: Pasted--PERFECT-Found-the-actual-backtest-results-Let-me-analyze-the-trades-csv-bash-cd-root--1763187633096_1763187633097.txt  (+13 more)
(+200 files in other folders)
